packages/components/alert/alert-tokens.scss
:where(.kbq-alert) {
    --kbq-alert-size-normal-container-border-radius: var(--kbq-size-m);
    --kbq-alert-size-normal-container-padding-top: 0;
    --kbq-alert-size-normal-container-padding-right: var(--kbq-size-s);
    --kbq-alert-size-normal-container-padding-bottom: 0;
    --kbq-alert-size-normal-container-padding-left: var(--kbq-size-s);
    --kbq-alert-size-normal-content-padding-top: var(--kbq-size-l);
    --kbq-alert-size-normal-content-padding-right: var(--kbq-size-s);
    --kbq-alert-size-normal-content-padding-bottom: var(--kbq-size-l);
    --kbq-alert-size-normal-content-padding-left: var(--kbq-size-m);
    --kbq-alert-size-normal-icon-margin-top: var(--kbq-size-l);
    --kbq-alert-size-normal-icon-margin-right: 0;
    --kbq-alert-size-normal-icon-margin-bottom: var(--kbq-size-l);
    --kbq-alert-size-normal-icon-margin-left: var(--kbq-size-m);
    --kbq-alert-size-normal-icon-padding-top: var(--kbq-size-xxs);
    --kbq-alert-size-normal-title-margin-bottom: var(--kbq-size-xxs);
    --kbq-alert-size-normal-close-button-margin-top: 10px;
    --kbq-alert-size-normal-close-button-margin-left: var(--kbq-size-3xs);
    --kbq-alert-size-normal-button-stack-padding-top: var(--kbq-size-s);
    --kbq-alert-size-normal-button-stack-padding-bottom: var(--kbq-size-3xs);
    --kbq-alert-size-normal-no-title-icon-margin-top: var(--kbq-size-l);
    --kbq-alert-size-normal-no-title-icon-padding-top: var(--kbq-size-3xs);
    --kbq-alert-size-compact-container-border-radius: var(--kbq-size-m);
    --kbq-alert-size-compact-container-padding-top: 0;
    --kbq-alert-size-compact-container-padding-right: var(--kbq-size-s);
    --kbq-alert-size-compact-container-padding-bottom: 0;
    --kbq-alert-size-compact-container-padding-left: var(--kbq-size-l);
    --kbq-alert-size-compact-content-padding-top: var(--kbq-size-m);
    --kbq-alert-size-compact-content-padding-right: var(--kbq-size-s);
    --kbq-alert-size-compact-content-padding-bottom: var(--kbq-size-m);
    --kbq-alert-size-compact-content-padding-left: 0;
    --kbq-alert-size-compact-icon-margin-top: var(--kbq-size-m);
    --kbq-alert-size-compact-icon-margin-right: var(--kbq-size-s);
    --kbq-alert-size-compact-icon-padding-top: var(--kbq-size-xxs);
    --kbq-alert-size-compact-title-margin-bottom: var(--kbq-size-3xs);
    --kbq-alert-size-compact-close-button-margin-top: 10px;
    --kbq-alert-size-compact-close-button-margin-left: var(--kbq-size-3xs);
    --kbq-alert-size-compact-button-stack-padding-top: var(--kbq-size-s);
    --kbq-alert-size-compact-button-stack-padding-bottom: var(--kbq-size-3xs);
    --kbq-alert-size-compact-no-title-icon-margin-top: var(--kbq-size-m);
    --kbq-alert-size-compact-no-title-icon-padding-top: var(--kbq-size-3xs);
    /* THEME TOKENS */
    --kbq-alert-default-error-container-background: var(--kbq-background-contrast-fade);
    --kbq-alert-default-error-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-default-error-container-text: var(--kbq-foreground-contrast);
    --kbq-alert-default-warning-container-background: var(--kbq-background-contrast-fade);
    --kbq-alert-default-warning-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-default-warning-container-text: var(--kbq-foreground-contrast);
    --kbq-alert-default-success-container-background: var(--kbq-background-contrast-fade);
    --kbq-alert-default-success-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-default-success-container-text: var(--kbq-foreground-contrast);
    --kbq-alert-default-info-container-background: var(--kbq-background-contrast-fade);
    --kbq-alert-default-info-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-default-info-container-text: var(--kbq-foreground-contrast);
    --kbq-alert-colored-error-container-background: var(--kbq-background-error-less);
    --kbq-alert-colored-error-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-colored-error-container-text: var(--kbq-foreground-contrast);
    --kbq-alert-colored-warning-container-background: var(--kbq-background-warning-less);
    --kbq-alert-colored-warning-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-colored-warning-container-text: var(--kbq-foreground-contrast);
    --kbq-alert-colored-success-container-background: var(--kbq-background-success-less);
    --kbq-alert-colored-success-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-colored-success-container-text: var(--kbq-foreground-contrast);
    --kbq-alert-colored-info-container-background: var(--kbq-background-theme-less);
    --kbq-alert-colored-info-container-title: var(--kbq-foreground-contrast);
    --kbq-alert-colored-info-container-text: var(--kbq-foreground-contrast);
}

